--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ jobs:
     - './cc-test-reporter before-build'
     script:
     - npm run lint
+    - npm run test:unit -- --coverage
     - npm run test:e2e
     after_script:
     - './cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT'
