--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,15 @@ jobs:
     - npm run test:unit -- --coverage
     - npm run test:e2e
     after_script:
-    - './cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT'
+    # See https://github.com/codeclimate/test-reporter/issues/263
+    - for f in packages/*; do
+        if [ -d $f ]; then
+          echo $f;
+          ./cc-test-reporter format-coverage -t lcov -o coverage/coverage.${f//\//-}.json $f/coverage/lcov.info;
+        fi
+      done;
+      ./cc-test-reporter sum-coverage -o coverage/coverage.total.json coverage/coverage.*.json;
+      ./cc-test-reporter upload-coverage -i coverage/coverage.total.json;
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
     - docker save postgres -o ~/.cache/docker/postgres.tar
