--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
     - './cc-test-reporter before-build'
     script:
     - npm run lint
-    - npm run test:unit -- --coverage
+    - npm run test:unit -- -- --coverage
     - npm run test:e2e
     after_script:
     # See https://github.com/codeclimate/test-reporter/issues/263
