--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ jobs:
     - npm run install
     script:
     - npm run lint
+    - npm run test:unit
     - npm run test:e2e
     after_script:
     - docker save node -o ~/.cache/docker/node.tar
