--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "audit": "lerna exec --parallel -- npm audit",
     "audit:fix": "lerna exec --parallel -- npm audit fix",
-    "clean": "lerna clean",
-    "install": "rm examples/cv/package-lock.json; rm examples/national-registration/package-lock.json; lerna exec -- npm i",
+    "clean": "lerna clean --yes",
+    "postinstall": "lerna exec --parallel -- npm ci",
     "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
