--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "audit": "lerna exec --parallel -- npm audit",
     "audit:fix": "lerna exec --parallel -- npm audit fix",
+    "lint": "lerna run --parallel lint",
     "clean": "lerna clean --yes",
     "postinstall": "lerna exec --parallel -- npm ci",
-    "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
-    "test:e2e": "sh -c 'cd ./e2e && ./script.sh'",
-    "test:unit": "lerna exec --parallel -- npm test",
+    "test:e2e": "sh -c 'cd ./e2e && npm run test'",
+    "test:unit": "lerna run --parallel --no-bail --ignore egendata-e2e test",
     "update": "lerna exec --parallel -- npm update",
     "version:patch": "lerna version patch",
     "version:minor": "lerna version minor",
